@@ -390,6 +390,11 @@ Tells MOC where your home directory is located and is used for various
 purposes, including the default location of the MOC directory.
 .LP
 .TP
+.B MOCP_OPTS
+The value of this variable will be prepended to the command line options
+before they are processed.
+.LP
+.TP
 .B MOCP_POPTRC
 A colon-separated list of POPT configuration files which will be loaded in
 sequence by MOC during initialisation.  If the variable is unset then the
